--- a/import/package.json
+++ b/import/package.json
@@ -6,7 +6,8 @@
     "@pkmn/data": "^0.9.19",
     "@pkmn/dex": "^0.9.19",
     "@pkmn/sim": "^0.9.19",
-    "@pkmn/smogon": "^0.5.14"
+    "@pkmn/smogon": "^0.5.14",
+    "axios": "^1.7.8"
   },
   "devDependencies": {
     "@pkmn/eslint-config": "^8.4.0",
