Maybe fixes importing for real this time

--- a/.eslintrc
+++ b/.eslintrc
@@ -57,7 +57,8 @@
         "abilities": true,
         "items": true,
         "createField": false,
-        "createPokemon": false
+        "createPokemon": false,
+        "setdex": true
     },
     "extends": "eslint:recommended",
     "rules": {
